fix : fetchBuilding 반환타입 제네릭 다형성 사용